ghc-4335c07/testsuite/tests/polykinds/T11648b.hs
{-# LANGUAGE TypeInType #-}

module T11648b where

import Data.Proxy

data X (a :: Proxy k)
